fixed the gap for mobile view

--- a/style.css
+++ b/style.css
@@ -35,15 +35,17 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-flow: dense;
-    grid-gap: 1.5rem;
+    row-gap: 1.5rem;
+    column-gap: 1.5rem;
     margin: 1rem;
     padding: 1rem;
     background-color: var(--clr-light-grayish-blue);
 }
 
-@media (max-width: 500px) {
+@media (max-width: 550px) {
     .container {
         grid-template-columns: 1fr;
+        column-gap: 0;
       
     }
 }
@@ -97,7 +99,7 @@ body {
     /*opacity: .5;*/
     position: absolute;
     top: 0;
-    right: 8rem;
+    right: 1.5rem;
 }
 
 .card__jonathan {
